#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Test_travis_CI], [1.0], [666])
AC_CONFIG_SRCDIR([Test_travis_CI.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(Test_travis_CI, 1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
